feat: atualizar docs base e storage
